kube-prometheus/manifests/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: alertmanager-main
  namespace: monitoring
spec:
  rules:
  - host: alertmanager-main.localdev.me
    http:
      paths:
      - backend:
          service:
            name: alertmanager-main
            port:
              number: 9093
        path: /
        pathType: ImplementationSpecific
  - host: alertmanager-main-reloader-web.localdev.me
    http:
      paths:
      - backend:
          service:
            name: alertmanager-main
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
