kube-prometheus/manifests/blackbox-exporter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: blackbox-exporter
  namespace: monitoring
spec:
  rules:
  - host: blackbox-exporter.localdev.me
    http:
      paths:
      - backend:
          service:
            name: blackbox-exporter
            port:
              number: 9115
        path: /
        pathType: ImplementationSpecific
  - host: blackbox-exporter-probe.localdev.me
    http:
      paths:
      - backend:
          service:
            name: blackbox-exporter
            port:
              number: 19115
        path: /
        pathType: ImplementationSpecific
