kube-prometheus/manifests/kube-state-metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: kube-state-metrics
  namespace: monitoring
spec:
  rules:
  - host: kube-state-metrics.localdev.me
    http:
      paths:
      - backend:
          service:
            name: kube-state-metrics
            port:
              number: 8443
        path: /
        pathType: ImplementationSpecific
  - host: kube-state-metrics-https-self.localdev.me
    http:
      paths:
      - backend:
          service:
            name: kube-state-metrics
            port:
              number: 9443
        path: /
        pathType: ImplementationSpecific
