kube-prometheus/manifests/node-exporter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: node-exporter
  namespace: monitoring
spec:
  rules:
  - host: node-exporter.localdev.me
    http:
      paths:
      - backend:
          service:
            name: node-exporter
            port:
              number: 9100
        path: /
        pathType: ImplementationSpecific
