kube-prometheus/manifests/prometheus-adapter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: prometheus-adapter
  namespace: monitoring
spec:
  rules:
  - host: prometheus-adapter.localdev.me
    http:
      paths:
      - backend:
          service:
            name: prometheus-adapter
            port:
              number: 443
        path: /
        pathType: ImplementationSpecific
