kube-prometheus/manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: prometheus-k8s
  namespace: monitoring
spec:
  rules:
  - host: prometheus-k8s.localdev.me
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
  - host: prometheus-k8s-reloader-web.localdev.me
    http:
      paths:
      - backend:
          service:
            name: prometheus-k8s
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
